src/test/ui/associated-types/cache/project-fn-ret-invariant.krisskross.nll.stderr
error: unsatisfied lifetime constraints
  --> $DIR/project-fn-ret-invariant.rs:65:4
   |
LL | fn transmute<'a,'b>(x: Type<'a>, y: Type<'b>) -> (Type<'a>, Type<'b>) {
   |              -- -- lifetime `'b` defined here
   |              |
   |              lifetime `'a` defined here
...
LL |    (a, b) //[krisskross]~ ERROR E0623
   |    ^^^^^^ function was supposed to return data with lifetime `'b` but it is returning data with lifetime `'a`

error: unsatisfied lifetime constraints
  --> $DIR/project-fn-ret-invariant.rs:65:4
   |
LL | fn transmute<'a,'b>(x: Type<'a>, y: Type<'b>) -> (Type<'a>, Type<'b>) {
   |              -- -- lifetime `'b` defined here
   |              |
   |              lifetime `'a` defined here
...
LL |    (a, b) //[krisskross]~ ERROR E0623
   |    ^^^^^^ function was supposed to return data with lifetime `'a` but it is returning data with lifetime `'b`

error: aborting due to 2 previous errors

